<resources>
    <!--<string name="app_name">网络助手</string> -->
    <string name="title_clientversion">客户端版本：</string>
    <string name="title_devicename">连接设备：</string>
    <string name="title_testmode">测试模式：</string>
    <string name="title_accesstype">地址获取：</string>
    <string name="change">更改</string>
    <string name="action_settings">设置</string>
    <string name="select_device">请选择需要连接的设备</string>
    <string name="none_paired">未发现已配对的设备</string>
    <string name="none_found">未发现可连接的设备</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">可用设备</string>
    <string name="title_history_devices">历史设备</string>
    <string name="clear_history">清空列表</string>
    <string name="button_scan">设备搜索</string>
    <string name="scanning">正在扫描设备</string>
    <string name="bluetooth_devicename">设备名称</string>
    <string name="error_bluetooth_openfail">蓝牙打开失败</string>
    <string name="error_bluetooth_connectfail">蓝牙连接失败</string>
    <string name="error_bluetooth_connectloss">蓝牙连接丢失</string>
    <string name="singleLanInternal">单内模式</string>
    <string name="singleLanExternal">单外模式</string>
    <string name="doubleLan">双口模式</string>
    <string name="wifiDHCP">WiFi模式</string>
    <string name="lanAndWifi">单内WiFi</string>
    <string name="iTVSimulate">电视模拟</string>
    <string name="access_static">手动设置</string>
    <string name="access_dhcp">动态分配</string>
    <string name="access_pppoe">拨号</string>
    <string name="ipAddress">IP地址</string>
    <string name="netMask">掩码</string>
    <string name="gateWay">网  关</string>
    <string name="DNS">D N S</string>
    <string name="pppoeAccount">账  号</string>
    <string name="pppoePassword">密  码</string>
    <string name="submit">递  交</string>
    <string name="button_scanQR">扫码连接</string>
    <string name="button_enter">输入连接</string>
    <string name="button_quit">退出</string>
    <string name="access_type">接入方式：</string>
    <string name="deviceip">IP地址： </string>
    <string name="serverinfo">服务器： </string>
    <string name="downspeed">下载速度</string>
    <string name="upspeed">上传速度</string>
    <string name="testspeedtype">测速源</string>
    <string name="bluetooth_openfail_notavailable">当前设备不支持蓝牙功能</string>
    <string name="bluetooth_openfail_canotopen">蓝牙打开失败</string>
    <string name="title_activity_login">用户登录</string>
    <string name="default_download_url">http://nudt.dl.360tpcdn.com/data/ubuntukylin-14.10-desktop-amd64.iso</string>
    <string name="gd10000">广东电信测速</string>
    <string name="title_activity_aaaa">aaaaActivity</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="clientVersion">客户端版本：</string>
    <string name="boxVersion">测速盒版本：</string>
    <string name="boxWorkmode">工作模式：</string>
    <string name="tcpdumpsave">抓包存放：</string>
    <string name="start">开始测试</string>
    <string name="quit">退出</string>
    <string name="scan">扫描</string>
    <string name="close">关闭</string>
    <string name="update_url">http://www.shwangce.com/nt201/download/clientapp/update.php</string>
    <string name="update_url_sh10000">http://www.shwangce.com/nt201/download/sh10000/update.php</string>
    <string name="update_url_js10000">http://www.shwangce.com/nt201/download/jiangsu10000/update.php</string>
    <string name="update_url_ah10086">http://www.shwangce.com/nt201/download/ah10086/update.php</string>
    <string name="update_url_test">http://www.shwangce.com/nt201/update_test.php</string>
    <string name="appversion">客户端版本：</string>
    <string name="connectdevice">连接设备：</string>
    <string name="doswitch">切换</string>
    <string name="update">升级</string>
    <string name="state">状态：</string>
    <string name="eth_state">网线状态：</string>
    <string name="startcapture">开始抓包</string>
    <string name="ipaddr">&#12288;IP地址：</string>
    <string name="ssid">&#12288;&#12288;SSID：</string>
    <string name="rx_bandwidth">下行:</string>
    <string name="tx_bandwidth">上行:</string>
    <string name="full_space">&#12288;</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
</resources>
