<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_devicelist"
    android:orientation="vertical"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@drawable/dialog_background"
    >
    <LinearLayout
        android:id="@+id/devicelist_llyt_finddevices"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/title_find_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:text="@string/title_other_devices"
            />
        <ListView android:id="@+id/find_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:divider="@color/material_blue_grey_80"
            android:dividerHeight="1dip"
            android:listSelector="@color/material_deep_teal_50"
            />

    </LinearLayout>

    <TextView android:id="@+id/title_history_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:text="@string/title_history_devices"
    />
    <ListView android:id="@+id/history_devices"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:divider="@color/material_blue_grey_80"
        android:dividerHeight="1dip"
        android:listSelector="@color/material_deep_teal_50"
    />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <Button android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_scan" />
        <Button android:id="@+id/btn_scanQR"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_scanQR" />
        <Button
            android:id="@+id/btn_enterdevice"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_enter" />
        </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button android:id="@+id/btn_clearhistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history"/>
        <Button android:id="@+id/btn_quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_quit"/>
    </LinearLayout>
</LinearLayout>