<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/blue_btn_bg_pressed_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".main.MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:id="@+id/llyt_client"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TextView
            android:text="@string/appversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textview_clientversion"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llyt_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llyt_client">
        <TextView
            android:text="@string/connectdevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textview_devicename"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/doswitch" />
        <TextView
            android:id="@+id/tv_updateboxapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llyt_state"
        android:layout_below="@id/llyt_device"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
        <TextView
            android:text="@string/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textview_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llyt_link"
        android:layout_below="@+id/llyt_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">
        <TextView
            android:text="@string/eth_state"
            style="@style/text_black_16_singleLine"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textview_linelink"
            style="@style/text_black_16_singleLine"
            android:visibility="gone"
            android:layout_width="70dp"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/text_black_16_singleLine"
            android:text="@string/access_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textview_accesstype"
            style="@style/text_black_16_singleLine"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_tcpdump"
            android:text="@string/startcapture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>
