<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/blue_btn_bg_pressed_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".client.main.MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:id="@+id/deviceinfo_llyt_clientinfo"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:visibility="gone">
        <TextView
            android:text="@string/title_clientversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/deviceinfo_tv_clientversion"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deviceinfo_llyt_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/deviceinfo_llyt_clientinfo"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/text_black_16_singleLine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:text="@string/title_devicename" />

            <TextView
                android:id="@+id/deviceinfo_tv_devicename"
                style="@style/text_black_16_singleLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/deviceinfo_tv_devicechange"
                style="@style/text_black_16_singleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/change" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/text_black_16_singleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/title_testmode" />

            <TextView
                android:id="@+id/deviceinfo_tv_testmode"
                style="@style/text_black_16_singleLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/deviceinfo_tv_testmodechange"
                style="@style/text_black_16_singleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/text_black_16_singleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/title_accesstype" />

            <TextView
                android:id="@+id/deviceinfo_tv_accesstype"
                style="@style/text_black_16_singleLine"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/deviceinfo_tv_accesstypechange"
                style="@style/text_black_16_singleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llyt_wifi_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                style="@style/text_black_16_singleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/ssid"/>
            <TextView
                android:id="@+id/textview_wifi_ssid"
                style="@style/text_black_16_singleLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/full_space"/>
            <TextView
                style="@style/text_black_16_singleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_bandwidth"/>
            <TextView
                android:id="@+id/textview_wifi_txbandwidth"
                style="@style/text_black_16_singleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/full_space"/>
            <TextView
                style="@style/text_black_16_singleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rx_bandwidth"/>
            <TextView
                android:id="@+id/textview_wifi_rxbandwidth"
                style="@style/text_black_16_singleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/full_space"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llyt_lan_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                style="@style/text_black_16_singleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/ipaddr" />

            <TextView
                android:id="@+id/textview_lanip"
                style="@style/text_black_16_singleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
