<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            style="@style/text_black_16_singleLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/clientVersion" />
        <TextView
            android:id="@+id/boxinfo_textview_clientversion"
            style="@style/text_black_16_singleLine"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            style="@style/text_black_16_singleLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/boxVersion" />
        <TextView
            android:id="@+id/boxinfo_textview_boxversion"
            style="@style/text_black_16_singleLine"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            style="@style/text_black_16_singleLine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/boxWorkmode"
            android:textColor="@color/colorPrimary" />

        <CheckBox
            android:id="@+id/boxinfo_checkbox_boxworkmode"
            style="@style/MyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:checked="true"
            android:text="开启高性能模式"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            style="@style/text_black_16_singleLine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tcpdumpsave"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/boxinfo_radiogroup_tcpdumpsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
            <RadioButton
                android:id="@+id/boxinfo_radiobutton_tcpdumpsaveatsdcard0"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="内置存储卡"/>
            <RadioButton
                android:id="@+id/boxinfo_radiobutton_tcpdumpsaveatsdcard1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="外置存储卡"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/boxinfo_button_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#ff336699"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="保存"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/boxinfo_button_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#ff336699"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="返回"
            android:textSize="20dp"/>
    </LinearLayout>
</LinearLayout>